--- a/less/blocks/_footer.less
+++ b/less/blocks/_footer.less
@@ -113,3 +113,12 @@
     right: 10px;
     top: 50%;
 }
+
+.mobile__nav-wrap-footer--active {
+    opacity: 1;
+    visibility: visible;   
+}
+
+.mobile__nav-footer--active {
+    transform: translateX(0);    
+}
