--- a/less/blocks/global/_base.less
+++ b/less/blocks/global/_base.less
@@ -20,6 +20,11 @@ body {
     font-weight: 700;
 }
 
+.body__lock {
+    height: 100%;
+    overflow: hidden;
+}
+
 .wrapper {
     min-height: 100%;
     display: flex;
