--- a/less/blocks/_header.less
+++ b/less/blocks/_header.less
@@ -1,7 +1,25 @@
 .header {
-    position: relative;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    color: #fff;
+    background: #fff;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.header.sticky {
+    top: 0;
+    background: #fff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    transition: all 0.3s ease-in;
+    box-shadow: 0 12px 65px rgba(0,0,0,0.15);
+    z-index: 5;
+}
+
+.header.out {
+	transform: translateY(-100%);
 }
 
 .header--shadow { 
@@ -45,23 +63,11 @@
     }
 }
 
-.header-list__item {
+.mobile-nav-list__item {
     margin-right: 50px;
 
     &:last-child {
         margin-right: 0;
-    }
-
-    a {
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 22px;
-        color: #0270A6;        
-        text-decoration: none;
-
-        &:hover {
-            text-decoration: underline;
-        }
     }
 
     @media (max-width: 1020px) {
@@ -71,6 +77,18 @@
     @media (max-width: 850px) {
         margin-right: 0;
         margin-bottom: 30px;
+    }
+}
+
+.mobile-nav-list__item-link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #0270A6;        
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
     }
 }
 
@@ -129,12 +147,12 @@
     background: rgba(37, 37, 37, 0.5);
     backdrop-filter: blur(10px);  
     transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;  
-    z-index: 10;
+    z-index: 1000;
 }
 
-.mobile__nav-wrap--active {
+.mobile__nav-wrap-header--active {
     opacity: 1;
-    visibility: visible;    
+    visibility: visible;   
 }
 
 .mobile__nav {
@@ -153,7 +171,7 @@
     }
 }
 
-.mobile__nav--active {
+.mobile__nav-header--active {
     transform: translateX(0);    
 }
 
